# File-Integrity-Monitoring

./: .gitignore  CMakeLists.txt  README.md  config.yaml  config_minimal.yaml  index.html  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
docs/: Database manager.md  Email manager.md  program_loop.md
include/: Config.hpp  CryptoUtil.hpp  DatabaseInterface.hpp  Filters.hpp  HashingAlgorithm.hpp  Log.hpp  MailAlertManager.hpp  ModuleManager.hpp  Monitor.hpp  PortabilityUtils.hpp  SecurityCLI.hpp  SecurityManager.hpp
python/: _dbtest.py  db.py  mymodule.py  test_db.py
src/: Config.cpp  CryptoUtil.cpp  DatabaseInterface.cpp  Filters.cpp  HashingAlgorithm.cpp  MailAlertManager.cpp  ModuleManager.cpp  MonitorInit.cpp  MonitorMain.cpp  SecurityCLI.cpp  SecurityManager.cpp  app.cpp  log.cpp  main.cpp
